tests/expectations/compiler/tuple/access_out_of_bounds_fail.out
Error [ETYC0372024]: Tuple index `2` out of range for a tuple with length `2`
    --> compiler-test:6:18
     |
   6 |     return (t.0, t.2); // Index `t.2` is out of bounds.
     |                  ^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:1:9
     |
   1 | program test.aleo {}
     |         ^^^^^^^^^
